[package]
name = "manyacg-wallpaper"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
winapi = { version = "0.3", features = ["winuser"] }
winreg = "0.10"
